// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show entity list field mount 1`] = `
<fieldlayout-stub class="ShowEntityListField">
	<entitylist-stub module="show/entity-lists/fieldKey" visible="true" inline="">
		<actionbar-stub ready="true" filters="" class="ShowEntityListField__action-bar">
			<div class="ShowEntityListField__label show-field__label">
				label
			</div>
		</actionbar-stub>
		<commandsdropdown-stub commands="[object Object]" class="SharpActionBar__actions-dropdown SharpActionBar__actions-dropdown--commands"></commandsdropdown-stub>
	</entitylist-stub>
</fieldlayout-stub>
`;

exports[`show entity list field mount collapsed 1`] = `
<fieldlayout-stub class="ShowEntityListField ShowEntityListField--collapsed">
	<entitylist-stub module="show/entity-lists/fieldKey" inline="">
		<actionbar-stub ready="true" filters="" collapsed="true" class="ShowEntityListField__action-bar">
			<div class="ShowEntityListField__label show-field__label">
				<details>
					<summary class="py-1">
						label
					</summary>
				</details>
			</div>
		</actionbar-stub>
		<commandsdropdown-stub commands="[object Object]" class="SharpActionBar__actions-dropdown SharpActionBar__actions-dropdown--commands"></commandsdropdown-stub>
	</entitylist-stub>
</fieldlayout-stub>
`;
